zetasql/parser/testdata/filter_fields.test
# Tests for the FILTER_FIELDS function.
# TODO: Remove no_show_parse_location_text after parse locations
# have been manually verified as correct.
[default no_show_parse_location_text]

select filter_fields(some_proto, +int32_field)
--
QueryStatement [0-46]
  Query [0-46]
    Select [0-46]
      SelectList [7-46]
        SelectColumn [7-46]
          FunctionCall [7-46]
            PathExpression [7-20]
              Identifier(filter_fields) [7-20]
            PathExpression [21-31]
              Identifier(some_proto) [21-31]
            UnaryExpression(+) [33-45]
              PathExpression [34-45]
                Identifier(int32_field) [34-45]
--
SELECT
  filter_fields(some_proto, +int32_field)
==

select filter_fields(some_proto, -int32_field)
--
QueryStatement [0-46]
  Query [0-46]
    Select [0-46]
      SelectList [7-46]
        SelectColumn [7-46]
          FunctionCall [7-46]
            PathExpression [7-20]
              Identifier(filter_fields) [7-20]
            PathExpression [21-31]
              Identifier(some_proto) [21-31]
            UnaryExpression(-) [33-45]
              PathExpression [34-45]
                Identifier(int32_field) [34-45]
--
SELECT
  filter_fields(some_proto, -int32_field)
==

select filter_fields(some_proto, -proto_field.int32_field)
--
QueryStatement [0-58]
  Query [0-58]
    Select [0-58]
      SelectList [7-58]
        SelectColumn [7-58]
          FunctionCall [7-58]
            PathExpression [7-20]
              Identifier(filter_fields) [7-20]
            PathExpression [21-31]
              Identifier(some_proto) [21-31]
            UnaryExpression(-) [33-57]
              PathExpression [34-57]
                Identifier(proto_field) [34-45]
                Identifier(int32_field) [46-57]
--
SELECT
  filter_fields(some_proto, -proto_field.int32_field)
==

select filter_fields(some_proto, +(extension_field).proto_field.int32_field)
--
QueryStatement [0-76]
  Query [0-76]
    Select [0-76]
      SelectList [7-76]
        SelectColumn [7-76]
          FunctionCall [7-76]
            PathExpression [7-20]
              Identifier(filter_fields) [7-20]
            PathExpression [21-31]
              Identifier(some_proto) [21-31]
            UnaryExpression(+) [33-75]
              DotIdentifier [63-75]
                DotIdentifier [51-63]
                  PathExpression [35-50]
                    Identifier(extension_field) [35-50]
                  Identifier(proto_field) [52-63]
                Identifier(int32_field) [64-75]
--
SELECT
  filter_fields(some_proto, +(extension_field).proto_field.int32_field)
==

select filter_fields(some_proto, +proto_field.(extension_field).int32_field)
--
QueryStatement [0-76]
  Query [0-76]
    Select [0-76]
      SelectList [7-76]
        SelectColumn [7-76]
          FunctionCall [7-76]
            PathExpression [7-20]
              Identifier(filter_fields) [7-20]
            PathExpression [21-31]
              Identifier(some_proto) [21-31]
            UnaryExpression(+) [33-75]
              DotIdentifier [63-75]
                DotGeneralizedField [45-63]
                  PathExpression [34-45]
                    Identifier(proto_field) [34-45]
                  PathExpression [47-62]
                    Identifier(extension_field) [47-62]
                Identifier(int32_field) [64-75]
--
SELECT
  filter_fields(some_proto, +proto_field.(extension_field).int32_field)
==

select filter_fields(some_proto, +proto_field.inner_proto_field.(extension_field))
--
QueryStatement [0-82]
  Query [0-82]
    Select [0-82]
      SelectList [7-82]
        SelectColumn [7-82]
          FunctionCall [7-82]
            PathExpression [7-20]
              Identifier(filter_fields) [7-20]
            PathExpression [21-31]
              Identifier(some_proto) [21-31]
            UnaryExpression(+) [33-81]
              DotGeneralizedField [63-81]
                PathExpression [34-63]
                  Identifier(proto_field) [34-45]
                  Identifier(inner_proto_field) [46-63]
                PathExpression [65-80]
                  Identifier(extension_field) [65-80]
--
SELECT
  filter_fields(some_proto, +proto_field.inner_proto_field.(extension_field))
==

select filter_fields(some_proto, +int32_field, +proto_field)
--
QueryStatement [0-60]
  Query [0-60]
    Select [0-60]
      SelectList [7-60]
        SelectColumn [7-60]
          FunctionCall [7-60]
            PathExpression [7-20]
              Identifier(filter_fields) [7-20]
            PathExpression [21-31]
              Identifier(some_proto) [21-31]
            UnaryExpression(+) [33-45]
              PathExpression [34-45]
                Identifier(int32_field) [34-45]
            UnaryExpression(+) [47-59]
              PathExpression [48-59]
                Identifier(proto_field) [48-59]
--
SELECT
  filter_fields(some_proto, +int32_field, +proto_field)
==

select filter_fields(some_proto, +int32_field, RESET_CLEARED_REQUIRED_FIELDS => True)
--
QueryStatement [0-85]
  Query [0-85]
    Select [0-85]
      SelectList [7-85]
        SelectColumn [7-85]
          FunctionCall [7-85]
            PathExpression [7-20]
              Identifier(filter_fields) [7-20]
            PathExpression [21-31]
              Identifier(some_proto) [21-31]
            UnaryExpression(+) [33-45]
              PathExpression [34-45]
                Identifier(int32_field) [34-45]
            NamedArgument [47-84]
              Identifier(RESET_CLEARED_REQUIRED_FIELDS) [47-76]
              BooleanLiteral(True) [80-84]
--
SELECT
  filter_fields(some_proto, +int32_field, RESET_CLEARED_REQUIRED_FIELDS  => True)
==

select filter_fields(some_proto, +int32_field, RESET_CLEARED_REQUIRED_FIELDS => False)
--
QueryStatement [0-86]
  Query [0-86]
    Select [0-86]
      SelectList [7-86]
        SelectColumn [7-86]
          FunctionCall [7-86]
            PathExpression [7-20]
              Identifier(filter_fields) [7-20]
            PathExpression [21-31]
              Identifier(some_proto) [21-31]
            UnaryExpression(+) [33-45]
              PathExpression [34-45]
                Identifier(int32_field) [34-45]
            NamedArgument [47-85]
              Identifier(RESET_CLEARED_REQUIRED_FIELDS) [47-76]
              BooleanLiteral(False) [80-85]
--
SELECT
  filter_fields(some_proto, +int32_field, RESET_CLEARED_REQUIRED_FIELDS  => False)
==

select filter_fields(some_proto, +int32_field, +`where`)
--
QueryStatement [0-56]
  Query [0-56]
    Select [0-56]
      SelectList [7-56]
        SelectColumn [7-56]
          FunctionCall [7-56]
            PathExpression [7-20]
              Identifier(filter_fields) [7-20]
            PathExpression [21-31]
              Identifier(some_proto) [21-31]
            UnaryExpression(+) [33-45]
              PathExpression [34-45]
                Identifier(int32_field) [34-45]
            UnaryExpression(+) [47-55]
              PathExpression [48-55]
                Identifier(`where`) [48-55]
--
SELECT
  filter_fields(some_proto, +int32_field, +`where`)
==

select filter_fields(some_proto, +int32_field, +where)
--
ERROR: Syntax error: Unexpected keyword WHERE [at 1:49]
select filter_fields(some_proto, +int32_field, +where)
                                                ^
